--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,12 @@
-<h1>home funciona</h1>
+<div class="card-columns">
+  <div class="card" *ngFor="let cancion of nuevasCanciones">
+    <img [src]="cancion.images[0].url" class="card-img-top" alt="..." />
+    <div class="card-body">
+      <h5 class="card-title">{{cancion.name}}</h5>
+      <p class="card-text">
+        <span *ngFor="let artista of cancion.artists" class="badge badge-pill badge-primary">{{artista.name}}</span>
+        
+      </p>
+    </div>
+  </div>
+</div>
